fixed low contrast colors

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h2 {
     margin-left: 0px;
     padding: 20px;
     margin-bottom: 20px;
-    color: #291E06;
+    color:black;
     height: 175px;
 }
 
@@ -55,7 +55,7 @@ h3 {
 footer {
   margin-top: 20px;
   background-color: #13522C;
-  color: #291E06;
+  color: black;
   width: 100% ;
   height: 50px;
   padding: 20px;
